--- a/package.json
+++ b/package.json
@@ -2,21 +2,27 @@
   "name": "birdcar",
   "version": "1.0.0",
   "private": true,
-  "description": "birdcar",
+  "description": "Nick Cannariato's developer blog and personal site.",
   "author": "Nick Cannariato",
   "keywords": [
     "gatsby"
   ],
   "scripts": {
-    "develop": "gatsby develop",
+    "develop": "cross-env NODE_ENV=development gatsby develop",
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "clean": "gatsby clean",
+    "new:post": "./bin/new_post"
   },
   "dependencies": {
+    "@fontsource/fira-code": "^4.2.2",
+    "@fontsource/inter": "^4.2.2",
+    "@headlessui/react": "^1.0.0",
+    "@heroicons/react": "^1.0.1",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
+    "@octokit/rest": "^18.5.3",
     "gatsby": "^3.3.1",
     "gatsby-plugin-image": "^1.3.1",
     "gatsby-plugin-mdx": "^2.3.0",
@@ -24,9 +30,24 @@
     "gatsby-plugin-sharp": "^3.3.1",
     "gatsby-plugin-sitemap": "^3.3.0",
     "gatsby-source-filesystem": "^3.3.0",
+    "gatsby-source-github": "^0.0.2",
+    "gatsby-source-graphql": "^3.3.0",
     "gatsby-transformer-sharp": "^3.3.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "typeface-inter": "^3.15.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.2.5",
+    "cross-env": "^7.0.3",
+    "dotenv": "^8.2.0",
+    "gatsby-plugin-postcss": "^4.3.0",
+    "gray-matter": "^4.0.2",
+    "husky": "^6.0.0",
+    "postcss": "^8.2.10",
+    "slugify": "^1.5.0",
+    "tailwindcss": "^2.1.1",
+    "yargs": "^16.2.0"
   }
 }
