Configure Gatsby to source GraphQL data from GitHub

--- a/package.json
+++ b/package.json
@@ -30,13 +30,11 @@
     "gatsby-plugin-sharp": "^3.3.1",
     "gatsby-plugin-sitemap": "^3.3.0",
     "gatsby-source-filesystem": "^3.3.0",
-    "gatsby-source-github": "^0.0.2",
     "gatsby-source-graphql": "^3.3.0",
     "gatsby-transformer-sharp": "^3.3.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0",
-    "typeface-inter": "^3.15.1"
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.5",
